module(name='mezel')

http_jar = use_repo_rule(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_jar",
)

version = "release-v0.4.0"
mezel_jar = http_jar(
    name = "mezel_binary",
    url = "https://github.com/valdemargr/mezel/releases/download/{}/{}".format(version, "mezel.jar"),
    sha256 = "bea23682abbac4b915cb0c993909a7b6d53d8a793a07bec5c03c86f4c81a3922",
)


bazel_dep(name = "rules_scala", version = "7.1.2")
