module(name='mezel')

http_jar = use_repo_rule(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_jar",
)

version = "release-v0.4.1"
mezel_jar = http_jar(
    name = "mezel_binary",
    url = "https://github.com/valdemargr/mezel/releases/download/{}/{}".format(version, "mezel.jar"),
    sha256 = "c75e73f1c2f42f605321ffba6a5065bb18621a9c630061e42e757d688a592254",
)


bazel_dep(name = "rules_scala", version = "release-v0.4.1"
