load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "example",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
      "@maven//:org_typelevel_cats_effect_2_13",
      "@maven//:org_typelevel_cats_core_2_13",
      "//example/src/main/scala/example/dep",
      "@hxl//:hxl"
    ],
)

