load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")

scala_library(
    name = "example",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
      "//example/src/main/scala/example/dep",
      "@hxl//:hxl"
    ] + select_for_scala_version(
      before_3_3 = [
        "@maven//:org_typelevel_cats_effect_2_13",
        "@maven//:org_typelevel_cats_core_2_13"
      ],
      since_3_3 = [
        "@maven3//:org_typelevel_cats_effect_3",
        "@maven3//:org_typelevel_cats_core_3"
      ]
    ),
)

